# indie_studio

./: .gitignore  B_YEP_400_BER_4_1_indiestudio_karl_erik_stoerzel.cbp  CMakeLists.txt  bomberman  bomberman.cbp  savedGames.txt
cmake/: FindSFMLAudio.cmake
games/: gameOne.txt  gameOne.xml  save1.xml  save2.xml  test.xml
include/: AIBot.hpp  AppContext.hpp  AssetLoadError.hpp  Audio.hpp  Bomb.hpp  BombUp.hpp  Bomberman.hpp  Character.hpp  Coordinate.hpp  Cube.hpp  Error.hpp  EventHandling.hpp  Explosion.hpp  FireUp.hpp  Floor.hpp  Game.hpp  ICollidable.hpp  IXML.hpp  Menu.hpp  Player.hpp  PlayerEventHandling.hpp  PowerUp.hpp  PowerUpEnum.hpp  PowerUpHandler.hpp  SceneError.hpp  SerializeHelper.hpp  SpeedUp.hpp  Timer.hpp  VisualMap.hpp  button_enum.hpp  help_functions.hpp  menu.hpp  my_list.hpp
media/: WoodenBox.3ds  bomb.3ds  fire.3ds  fire2.3ds  skybox.irr
src/: AIBot.cpp  AssetLoadError.cpp  Bomb.cpp  BombUp.cpp  BuildMenu.cpp  Character.cpp  Collidable.cpp  Collidable.hpp  Cube.cpp  EventHandling.cpp  Explosion.cpp  FireUp.cpp  Floor.cpp  Game.cpp  Menu.cpp  Player.cpp  PlayerEventHandling.cpp  PowerUp.cpp  PowerUpHandler.cpp  SceneError.cpp  SerializeHelper.cpp  Speedup.cpp  Timer.cpp  VisualMap.cpp  build_menu.cpp  help_functions.cpp  main.cpp  menu.cpp
